# utimer

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  build.sh  config.h.in  configure  configure.ac  release.sh
.github/workflows/: build.yml
completion/: Makefile.am  utimer-completion.bash
data/: Makefile.in  utimer.1
debian/: changelog  control  copyright  files  rules  watch
debian/patches/: fix-autotools.patch  fix-docs  series
src/: Makefile.in  log.c  log.h  timer.c  timer.h  utils.c  utils.h  utimer.c  utimer.h
src/tests/: Makefile.am  Makefile.in  maintests.c
