include $(top_srcdir)/Makefile.decl 

SUBDIRS = src po data completion

ACLOCAL_AMFLAGS = -I m4

DISTCLEANFILES =                \
        intltool-extract        \
        intltool-merge          \
        intltool-update         \
        Makefile.in

EXTRA_DIST += README.md autogen.sh build.sh release.sh Doxyfile
